﻿v1.1.2

System
* Change: Each Boss Mod will now catch any errors if KBM doesn't fully start for any reason. This will prevent it running and spamming errors.

Unit Tracking
* Change: Major change in how unit tracking works. Removed lots of Inspect calls and instead push them directly to Idle.
* Change: Once a unit is officially *seen* by the group, it'll pull the unit from the Idle bin and assign it appropriately.

Infernal Dawn
* Warboss Drak
** Fixed: Drak and his Castbar were not initializing correctly.
** Fixed: Natung and his Castbar were not initializing correctly.

----
v1.1.1

Rift Version
* Change: Now compatible with Rift 1.9

System
* Initialization
** Fixed: Adjusted how and when certain KBM elements initialize themselves on start-up and linking.

Infernal Dawn
* Maklamos The Scryer
** Change: Reverted Crystalline Desolation back to a 28s timer.

----
v1.1.0

* Note
** This cycle of KBM is mainly for final updates for native Korean clients which will be running Rift 1.8 for some months
** There will also be minor fixes to ensure KBM is partially viable with Rift 1.9.
** Please ignore any "This addon is running slowly" messages for now. It should only be a initialization warning and will be fixed.
** This is the final version compatible with Rift 1.8. v1.1.1.xxx and above will be Rift 1.9 and above only.

Version Checking
* Fixed: Release versions were incorrectly receiving Alpha version update notifications.

Infernal Dawn
* Ember Conclave
** Fixed: Only the first active boss was initializing their castbar correctly.

Experts
* Charmers Caldera
** Fixed: 1.9 only error with string formating.

Korean Translations
* On-going updates and fixes for Korean native client support.

----
v1.0.9

Version
* New: Alpha versions will now be signed with KBM.Alpha = true as opposed to KBM.Alpha = "rXXX"
* Change: KBM will now use a streamline version numbering system. All Release and Alpha candidates will include the following structure. High.Med.Low.Rev